Conclusión medio hecha, introducción ligeramente mejorada

--- a/TFM_tex/ParteInformatica.tex
+++ b/TFM_tex/ParteInformatica.tex
@@ -1,7 +1,7 @@
 \newpage
 \chapter{Introducción}
 
-En 2020, el \textbf{cáncer de próstata}, (\textit{Prostate Cancer, PCa}) fue el segundo tipo de cáncer más frecuente, y el quinto más mortal, en varones \cite{GlobalCancer}. Una \textbf{biopsia de próstata} es una prueba que consiste en la extracción de pequeños tejidos de la próstata para examinar posibles signos de cáncer (Ver Figura \ref{fig:biopsias_ejemplos}). El \textbf{Sistema de Puntuación de Gleason} (\textit{Gleason Score}) es una calificación, en el rango de 2 a 10, que se da a biopsias de la próstata tras ser examinadas bajo un microscopio \cite{GleasonGov}. Valores más altos indican cánceres más agresivos y de crecimiento más rápido. En 2014 la \textbf{Sociedad Internacional de Patología Urológica} (\textit{International Society of Urological Pathology, ISUP}) propuso un nuevo sistema basado en la Puntuación de Gleason, que propone cinco grupos ordenados (\textbf{Gleason Groups, GGs}) \cite{ISUP2014Disc}:
+En 2020, el \textbf{cáncer de próstata}, (\textit{Prostate Cancer, PCa}) fue el segundo tipo de cáncer más frecuente, y el quinto más mortal, en varones a nivel mundial \cite{GlobalCancer}. Un diagnóstico temprano de este es crucial para reducir la mortalidad del mismo. A día de hoy, el diagnóstico del PCa se basa en la realización de una \textbf{biopsia de próstata} en caso de sospecha, tras la evaluación inicial mediante pruebas como la medición del antígeno prostático específico o el examen rectal digital. Una biopsia de próstata es una prueba que consiste en la extracción de pequeños tejidos de la próstata para examinar posibles signos de cáncer (Ver Figura \ref{fig:biopsias_ejemplos}). El \textbf{Sistema de Puntuación de Gleason} (\textit{Gleason Score}) es una calificación, en el rango de 2 a 10, que se da a biopsias de la próstata tras ser examinadas bajo un microscopio \cite{GleasonGov}. Valores más altos indican cánceres más agresivos y de crecimiento más rápido. En 2014 la \textbf{Sociedad Internacional de Patología Urológica} (\textit{International Society of Urological Pathology, ISUP}) propuso un nuevo sistema basado en la Puntuación de Gleason, que propone cinco grupos ordenados (\textbf{Gleason Groups, GGs}) \cite{ISUP2014Disc}:
 \begin{itemize}
 \item \textbf{GG1: } Cáncer de grado bajo. Puntuación de gleason 6 o inferior.
 \item \textbf{GG2: } Cáncer de grado medio. Puntuación de gleason 7.
@@ -1454,7 +1454,13 @@ En resumen el método propuesto FX-SHIELD es una versión mejor de FR-SHIELD (ot
 
 \clearpage
 \chapter{Conclusiones} \label{cap:conc}
-Conclusiones del TFM y si he conseguido los objetivos que me propuse al inicio.
+
+En este trabajo nos hemos centrado en el problema de mejorar la interpretabilidad de modelos de clasificación de lesiones cancerosas en biopsias de próstata utilizando ténicas de IA explicable. Para el desarrollo de este, lo dividimos en objetivos más pequeños que hemos cumplido a lo largo del trabajo. En primer lugar realizamos una revisión del estado del arte de los distintos métodos necesarios para abordar el problema principal: modelos de clasificación, de métodos de XAI para producción de explicaciones, métodos de XAI de mejora de explicaciones y métricas XAI que sirvan para medir cuantitativamente los distintos métodos propuestos. A continuación realizamos un estudio del código de la regularización X-SHIELD \cite{XSHIELD}, método del que parten los que proponemos nosotros, y las métricas REVEL \cite{REVEL} que son las que utilizamos para comparar los distintos métodos. Después propusimos y presentamos en detalle nuestros métodos originales: FX-SHIELD, FR-SHIELD y H-SHIELD. Tras esto los implementamos y diseñamos los distintos experimentos: el modelo clasificación utilizado, detalles de los hiperparámetros utilizados, explicación del conjunto de datos utilizado y cómo lo hemos divido, y métricas y test estadísticos utilizados para comparar los distintos métodos. Finalmente implementamos estos, evaluamos los resultados obtenidos y discutimos su significado.
+
+
+
+\highlight{Aquí va un párrafo hablando brevemente de los resultados obtenidos y de como eso implica que hemos conseguido adecuadamente afrontar el problema planteado del trabajo.}
+
 
 \section{Trabajos futuros}
 
